# Mandelbrot_set

./: .gitignore  CMakeLists.txt  mandel.cpp  save_image.h  window.h
